feature: allow user to control whether or not to enable syntax highlighting in DiffView.

--- a/src/SourceGit/Resources/Locales.zh.resx
+++ b/src/SourceGit/Resources/Locales.zh.resx
@@ -1287,4 +1287,7 @@
   <data name="Text.Cut" xml:space="preserve">
     <value>剪切</value>
   </data>
+  <data name="Text.Diff.SyntaxHighlight" xml:space="preserve">
+    <value>语法高亮</value>
+  </data>
 </root>
