--- a/src/SourceGit/Resources/Locales.resx
+++ b/src/SourceGit/Resources/Locales.resx
@@ -1287,4 +1287,7 @@
   <data name="Text.Cut" xml:space="preserve">
     <value>Cut</value>
   </data>
+  <data name="Text.Diff.SyntaxHighlight" xml:space="preserve">
+    <value>Syntax Highlighting</value>
+  </data>
 </root>
