--- a/src/SourceGit/Resources/Locales.en.resx
+++ b/src/SourceGit/Resources/Locales.en.resx
@@ -1296,4 +1296,7 @@
   <data name="Text.Preference.General.MonospaceFont" xml:space="preserve">
     <value>Monospace FontFamily</value>
   </data>
+  <data name="Text.Preference.General.DefaultFontSize" xml:space="preserve">
+    <value>Default Font Size</value>
+  </data>
 </root>
