--- a/src/SourceGit/Resources/Locales.zh.resx
+++ b/src/SourceGit/Resources/Locales.zh.resx
@@ -1302,4 +1302,28 @@
   <data name="Text.Preference.Appearance" xml:space="preserve">
     <value>外观配置</value>
   </data>
+  <data name="Text.SelfUpdate.Title" xml:space="preserve">
+    <value>软件更新</value>
+  </data>
+  <data name="Text.SelfUpdate.Error" xml:space="preserve">
+    <value>获取最新版本信息失败！</value>
+  </data>
+  <data name="Text.SelfUpdate.Available" xml:space="preserve">
+    <value>检测到软件有版本更新: </value>
+  </data>
+  <data name="Text.SelfUpdate.GotoDownload" xml:space="preserve">
+    <value>下    载</value>
+  </data>
+  <data name="Text.SelfUpdate.IgnoreThisVersion" xml:space="preserve">
+    <value>忽略此版本</value>
+  </data>
+  <data name="Text.SelfUpdate" xml:space="preserve">
+    <value>检测更新...</value>
+  </data>
+  <data name="Text.SelfUpdate.UpToDate" xml:space="preserve">
+    <value>当前已是最新版本。</value>
+  </data>
+  <data name="Text.Preference.General.Check4UpdatesOnStartup" xml:space="preserve">
+    <value>启动时检测软件更新</value>
+  </data>
 </root>
